--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,79 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activty_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+    <com.longtailvideo.jwplayer.JWPlayerView
+        android:id="@+id/jwplayer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="H,16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_tools_player"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/jwplayer">
+
+        <RadioGroup
+            android:id="@+id/rg_size"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <RadioButton
+                android:id="@+id/rb_vcm"
+                android:checked="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Vertical Video camera mobile" />
+
+            <RadioButton
+                android:id="@+id/rb_vyb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Vertical Video youtube" />
+
+            <RadioButton
+                android:id="@+id/rb_h_for_and_three"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="this for horizontal 4 : 3 "
+                android:text="Horizontal 4:3" />
+
+            <RadioButton
+                android:id="@+id/rb_h_twenty_one_and_nine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="this for horizontal 21 : 9 "
+                android:text="Horizontal 21:9" />
+
+            <RadioButton
+                android:id="@+id/rb_h_sixteen_and_nine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="this for horizontal 21 : 9 "
+                android:text="Horizontal 16:9" />
+        </RadioGroup>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <id.alik.jwplayer_multisize.costume.CallbackScreen
+        android:id="@+id/callback_screen"
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_tools_player" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
