--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activty_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:clipToPadding="false">
 
-    <com.longtailvideo.jwplayer.JWPlayerView
-        android:id="@+id/jwplayer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="H,16:9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_tools_player"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/jwplayer">
+        android:background="#ffffff">
 
-        <RadioGroup
-            android:id="@+id/rg_size"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
+            app:expandedTitleMarginStart="72dp"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_collapseMode="parallax"
+                tools:context=".MainActivity">
+
+                <com.longtailvideo.jwplayer.JWPlayerView
+                    android:id="@+id/jwplayer"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintDimensionRatio="H,16:9"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:layout_constraintDimensionRatio="H,16:9"
+                app:layout_collapseMode="pin" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/rb_vcm"
-                android:checked="true"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_tools_player"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Vertical Video camera mobile" />
+                app:layout_constraintTop_toBottomOf="@+id/jwplayer">
 
-            <RadioButton
-                android:id="@+id/rb_vyb"
+                <RadioGroup
+                    android:id="@+id/rg_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <RadioButton
+                        android:id="@+id/rb_vcm"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="Vertical Video camera mobile" />
+
+                    <RadioButton
+                        android:id="@+id/rb_vyb"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Vertical Video youtube" />
+
+                    <RadioButton
+                        android:id="@+id/rb_h_for_and_three"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="this for horizontal 4 : 3 "
+                        android:text="Horizontal 4:3" />
+
+                    <RadioButton
+                        android:id="@+id/rb_h_twenty_one_and_nine"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="this for horizontal 21 : 9 "
+                        android:text="Horizontal 21:9" />
+
+                    <RadioButton
+                        android:id="@+id/rb_h_sixteen_and_nine"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="this for horizontal 21 : 9 "
+                        android:text="Horizontal 16:9" />
+                </RadioGroup>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <id.alik.jwplayer_multisize.costume.CallbackScreen
+                android:id="@+id/callback_screen"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Vertical Video youtube" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cl_tools_player" />
+        </LinearLayout>
 
-            <RadioButton
-                android:id="@+id/rb_h_for_and_three"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="this for horizontal 4 : 3 "
-                android:text="Horizontal 4:3" />
-
-            <RadioButton
-                android:id="@+id/rb_h_twenty_one_and_nine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="this for horizontal 21 : 9 "
-                android:text="Horizontal 21:9" />
-
-            <RadioButton
-                android:id="@+id/rb_h_sixteen_and_nine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="this for horizontal 21 : 9 "
-                android:text="Horizontal 16:9" />
-        </RadioGroup>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <id.alik.jwplayer_multisize.costume.CallbackScreen
-        android:id="@+id/callback_screen"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_tools_player" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
